--- a/La0Wang.ini
+++ b/La0Wang.ini
@@ -22,7 +22,13 @@ ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
 ruleset=🎥 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
+ruleset=🎥 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AmazonIp.list
 ruleset=🎥 DisneyPlus,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
+ruleset=📲 电报消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+ruleset=📹 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
+ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
+ruleset=🎶 网易音乐,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
 ;ruleset=🎥 奈飞迪士尼,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ;ruleset=🎥 奈飞迪士尼,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
@@ -46,6 +52,10 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/gener
 custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]🚀 手动切换`[]DIRECT`.*
 custom_proxy_group=🎥 DisneyPlus`select`[]🚀 节点选择`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]🚀 手动切换`[]DIRECT`.*
 ;custom_proxy_group=🎥 奈飞迪士尼`select`[]🚀 节点选择`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]🚀 手动切换`[]DIRECT`.*
+custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]🚀 手动切换`[]DIRECT`.*
+custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]🚀 手动切换`[]DIRECT`.*
+custom_proxy_group=📺 哔哩哔哩`select`[]🚀 节点选择`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]🚀 手动切换`[]DIRECT`.*
+custom_proxy_group=🎶 网易音乐`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase)
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]DIRECT`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]🚀 手动切换
 custom_proxy_group=Ⓜ️ 微软云盘`select`[]🚀 节点选择`[]DIRECT`[]🇺🇲 美国自动`[]🇭🇰 香港自动`[]🇨🇳 台湾自动`[]🇸🇬 狮城自动`[]🇯🇵 日本自动`[]🚀 手动切换
@@ -67,5 +77,3 @@ enable_rule_generator=true
 overwrite_original_rules=true
 
 ;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
-
-;luck
